[gd_scene load_steps=5 format=3 uid="uid://dfd2v6baa7rfu"]

[ext_resource type="FontFile" uid="uid://dqqq0ch2fwwgl" path="res://art/Manufacturing_Consent/ManufacturingConsent-Regular.ttf" id="1_mdnvw"]
[ext_resource type="Script" uid="uid://cx6q12i5catg0" path="res://hud.gd" id="1_uqnab"]

[sub_resource type="InputEventAction" id="InputEventAction_64ctp"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_8sq4i"]
events = [SubResource("InputEventAction_64ctp")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_uqnab")

[node name="TopHUD" type="VBoxContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 109.0
grow_horizontal = 2

[node name="HealthBar" type="ProgressBar" parent="TopHUD"]
layout_mode = 2
step = 1.0

[node name="AmmoLabel" type="Label" parent="TopHUD/HealthBar"]
layout_mode = 0
offset_top = 31.0
offset_right = 1080.0
offset_bottom = 71.0
theme_override_fonts/font = ExtResource("1_mdnvw")
theme_override_font_sizes/font_size = 32
text = "Ammo: 5"

[node name="ScoreLabel" type="Label" parent="TopHUD"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_mdnvw")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -160.5
offset_right = 240.0
offset_bottom = 160.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_mdnvw")
theme_override_font_sizes/font_size = 64
text = "Fight!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -140.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_mdnvw")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_8sq4i")
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
